# kiteconnect-async-wasm

./: API_GUIDE.md  ASYNC_MIGRATION_PLAN.md  AUTOMATED_RELEASES.md  CHANGELOG.md  CHUNKING_OPTIMIZATIONS.md  CI_CD_SETUP.md  COMPREHENSIVE_API_GUIDE.md  Cargo.toml  Cargo_async.toml  DOCUMENTATION_STATUS.md  FEATURE_FLAGS_RESOLVED.md  FEATURE_TESTING.md  GITHUB_SECRETS_SETUP.md  MIGRATION_GUIDE.md  MODELS_IMPLEMENTATION_COMPLETE.md  PHASE_8_CONNECT_INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_RELEASE.md  README.md  V1.0.3_RELEASE_NOTES.md  V1_MIGRATION_GUIDE.md  WASM_IMPLEMENTATION.md  flake.nix
.github/workflows/: ci.yml  release.yml
doc/: QUICKREF.md  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
doc/async_connect_example/: all.html  constant.URL.html  fn.example_usage.html  fn.get_credentials.html  fn.main.html  index.html  sidebar-items.js  struct.KiteConnect.html  trait.RequestHandler.html
doc/candle_deserialization_test/: all.html  fn.main.html  index.html
doc/chunking_optimization_test/: all.html  fn.format_duration.html  fn.main.html  fn.test_data_duplication_fix.html  fn.test_date_range_validation.html  fn.test_interval_time_increments.html  fn.test_reverse_chronological_splitting.html  index.html  sidebar-items.js
doc/comprehensive_example/: all.html  fn.get_credentials.html  fn.main.html  index.html
doc/connect_sample/: all.html  fn.get_credentials.html  fn.main.html  index.html
doc/dual_api_example/: all.html  fn.get_credentials.html  fn.main.html  index.html
doc/endpoint_management_demo/: all.html  fn.demonstrate_endpoint_system.html  fn.demonstrate_rate_limiter_stats.html  fn.demonstrate_rate_limiting_config.html  fn.demonstrate_rate_limiting_in_action.html  fn.example_api_method_usage.html  fn.get_credentials.html  fn.get_demo_credentials.html  fn.main.html  index.html  sidebar-items.js
doc/enum_module_test/: all.html  fn.main.html  index.html
doc/exception_handling_demo/: all.html  fn.demonstrate_error_classification.html  fn.demonstrate_http_status_mapping.html  fn.demonstrate_official_exceptions.html  fn.main.html  index.html  sidebar-items.js
doc/foundation_types_demo/: all.html  fn.main.html  fn.test_enums.html  fn.test_error_types.html  fn.test_response_types.html  index.html  sidebar-items.js
doc/historical_data_256265_example/: all.html  fn.analyze_derivatives_data.html  fn.analyze_intraday_data.html  fn.get_credentials.html  fn.main.html  fn.process_historical_data_example.html  index.html  sidebar-items.js
doc/historical_data_request_test/: all.html  fn.main.html  index.html
doc/historical_data_typed_example/: all.html  fn.get_credentials.html  fn.main.html  index.html
doc/interval_serde_test/: all.html  fn.main.html  index.html
doc/kiteconnect/: all.html  index.html
doc/kiteconnect_async_wasm/: all.html  index.html  sidebar-items.js
doc/openssl/: all.html
doc/openssl_sys/: all.html  constant.BIO_CTRL_DGRAM_GET_CAPS.html  constant.BIO_CTRL_DGRAM_GET_LOCAL_ADDR_CAP.html  constant.BIO_CTRL_DGRAM_GET_LOCAL_ADDR_ENABLE.html  constant.BIO_CTRL_DGRAM_GET_MTU.html  constant.BIO_CTRL_DGRAM_GET_NO_TRUNC.html  constant.BIO_CTRL_DGRAM_SET_CAPS.html  constant.BIO_CTRL_DGRAM_SET_LOCAL_ADDR_ENABLE.html  constant.BIO_CTRL_DGRAM_SET_MTU.html  constant.BIO_CTRL_DGRAM_SET_NO_TRUNC.html  constant.EVP_PKEY_OP_SIGNMSG.html  constant.EVP_PKEY_OP_TYPE_SIG.html  constant.EVP_PKEY_OP_VERIFYMSG.html  constant.NID_ac_auditEntity.html  constant.SSL_VALUE_CLASS_FEATURE_NEGOTIATED.html  constant.SSL_VALUE_CLASS_FEATURE_PEER_REQUEST.html  constant.SSL_VALUE_CLASS_FEATURE_REQUEST.html  constant.SSL_VALUE_CLASS_GENERIC.html  constant.SSL_VALUE_EVENT_HANDLING_MODE.html  constant.SSL_VALUE_EVENT_HANDLING_MODE_EXPLICIT.html  constant.SSL_VALUE_EVENT_HANDLING_MODE_IMPLICIT.html  constant.SSL_VALUE_EVENT_HANDLING_MODE_INHERIT.html  constant.SSL_VALUE_NONE.html  constant.SSL_VALUE_QUIC_IDLE_TIMEOUT.html  constant.SSL_VALUE_QUIC_STREAM_BIDI_LOCAL_AVAIL.html  constant.SSL_VALUE_QUIC_STREAM_BIDI_REMOTE_AVAIL.html  constant.SSL_VALUE_QUIC_STREAM_UNI_LOCAL_AVAIL.html  constant.SSL_VALUE_QUIC_STREAM_UNI_REMOTE_AVAIL.html  constant.SSL_VALUE_STREAM_WRITE_BUF_AVAIL.html  constant.SSL_VALUE_STREAM_WRITE_BUF_SIZE.html  constant.SSL_VALUE_STREAM_WRITE_BUF_USED.html  constant.X509_PURPOSE_CODE_SIGN.html  constant.X509_PURPOSE_MAX.html  enum.BIO_ADDR.html  enum.BIO_POLL_DESCRIPTOR.html  fn.BIO_dgram_get_cap.html  fn.BIO_dgram_get_local_addr_cap.html  fn.BIO_dgram_get_local_addr_enable.html  fn.BIO_dgram_get_mtu.html  fn.BIO_dgram_get_no_trunc.html  (+70 more)
doc/optimization_demo/: all.html  fn.demo_established_stock.html  fn.demo_interval_comparison.html  fn.demo_newly_listed_stock.html  fn.main.html  index.html  sidebar-items.js
doc/reqwest/: all.html  struct.Body.html  struct.ClientBuilder.html  struct.RequestBuilder.html  struct.Response.html  struct.Url.html
examples/: ENVIRONMENT_VARIABLES.md  async_connect_example.rs  candle_deserialization_test.rs  chunking_optimization_test.rs  comprehensive_debug.rs  comprehensive_example.rs  comprehensive_models_demo.rs  connect_sample.rs  debug_instruments.rs  dual_api_example.rs  endpoint_management_demo.rs  enum_module_test.rs  exception_handling_demo.rs  exchange_typed_example.rs  foundation_test.rs  foundation_types_demo.rs  gzip_fix_summary.rs  historical_data_256265_example.rs  historical_data_request_test.rs  historical_data_typed_example.rs  instruments_typed_example.rs  interval_serde_test.rs  log_instruments_example.rs  minimal_instruments_test.rs  model_usage_example.rs  optimization_demo.rs  phase8_dual_api_example.rs  response_handling_example.rs  reverse_chunking_test.rs  session_data_demo.rs  simple_256265_example.rs  simple_debug_test.rs  simple_instruments_log.rs  test_gzip_fix.rs  token_invalidation_demo.rs
scripts/: VERSION_MANAGEMENT.md  bump-version.sh  create-release.sh  create-tag.sh  generate-docs.sh  release.sh
src/: connect.rs  connect_old.rs  connect_original.rs.backup  lib.rs
src/connect/: auth.rs  (+13 more)
template/: README.md  VERSION_MANAGEMENT.md
tests/: integration_tests.rs
(+2081 files in other folders)
