[package]
name = "kiteconnect"
version = "0.3.0"
authors = ["Joe Paul <joeirimpan@gmail.com>"]
description = "Async RUST API wrapper for KiteConnect REST APIs with WASM support"
license = "MIT"
repository = "https://github.com/zerodhatech/kiteconnect-rust"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core async dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
url = "2.5.4"
log = "0.4"
async-trait = "0.1.88"
hex = "0.4"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
sha2 = "0.10.9"
csv = "1.3.1"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.20", features = ["json"], default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "Crypto",
    "SubtleCrypto",
] }
gloo-utils = "0.1"

[dev-dependencies]
mockito = "1.7.0"
tokio-test = "0.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"

# WASM test dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["native"]
native = []
wasm = []
