[package]
name = "kiteconnect-async-wasm"
version = "0.1.4"
authors = ["SPRAGE <shauna.pai@gmail.com>"]
description = "Modern async Rust client for KiteConnect REST APIs with WASM support. Clean, well-documented, and focused on REST-only operations."
license = "Unlicense"
repository = "https://github.com/SPRAGE/kiteconnect-async-wasm"
homepage = "https://github.com/SPRAGE/kiteconnect-async-wasm"
documentation = "https://docs.rs/kiteconnect-async-wasm"
keywords = ["kiteconnect", "zerodha", "trading", "api", "async"]
categories = ["api-bindings", "web-programming", "wasm"]
readme = "README.md"
edition = "2021"

# Configuration for docs.rs documentation builds
[package.metadata.docs.rs]
features = ["native", "debug"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core async dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
url = "2.5.4"
log = { version = "0.4", optional = true }
async-trait = "0.1.88"
hex = "0.4"

# Native-specific dependencies (controlled by 'native' feature)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["full"], optional = true }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
sha2 = { version = "0.10.9", optional = true }
csv = { version = "1.3.1", optional = true }

# WASM-specific dependencies (controlled by 'wasm' feature)
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.20", features = ["json"], default-features = false }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "Crypto",
    "SubtleCrypto",
], optional = true }
gloo-utils = { version = "0.1", optional = true }
csv-core = { version = "0.1.12", optional = true }

[dev-dependencies]
mockito = "1.7.0"
tokio-test = "0.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"

# WASM test dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["native"]

# Native platform support (tokio, native-tls, file I/O, etc.)
native = ["dep:tokio", "dep:sha2", "dep:csv"]

# WASM platform support (web-sys, js-sys, browser APIs)
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "dep:gloo-utils", "dep:csv-core"]

# Enable all logging and debugging features
debug = ["dep:log"]
